[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"
authors = ["Server-RS Team"]
description = "High-performance Rust server"
readme = "README.md"
license = "MIT"

[dependencies]
# Web框架 - 高性能异步
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# 序列化 - SIMD 加速
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# 数据库 - 异步连接
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.12"

# 缓存
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 压缩
zstd = "0.13"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

[profile.release]
# 生产环境优化配置
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
# 开发环境优化
opt-level = 1
debug = true
